hide forum creation cover when it's restricted

--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -236,7 +236,7 @@
   "newsfeed.call-to-action.start-a-forum": "Create",
   "newsfeed.nothing-to-show": "Nothing more to show",
   "newsfeed.title": "Democracies",
-  "newsfeed.welcome.body": "Just a few clicks, and you will be able to setup your own DemocracyOS.",
+  "newsfeed.welcome.body": "Just a few clicks, and you will be able to participate on DemocracyOS.",
   "newsfeed.welcome.join": "Sign up!",
   "newsfeed.welcome.title": "Start your democracy now",
   "notifications.error": "Unable to connect to notifications engine",
