add export comments

--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -27,6 +27,7 @@
   "admin-permissions.roles.participant.title": "Participants",
   "admin-permissions.roles.participant.name": "Participant",
   "admin-permissions.roles.participant.description": "Participants can comment and vote this forum if it's Restricted or Private.",
+  "admin-sidebar.comments.title": "Comments",
   "admin-sidebar.tags.create": "Create",
   "admin-sidebar.tags.list": "List",
   "admin-sidebar.tags.title": "Tags",
@@ -35,6 +36,7 @@
   "admin-sidebar.topics.title": "Topics",
   "admin-sidebar.permissions.title": "Privileges",
   "admin-sidebar.whitelists.title": "Enabled users",
+  "admin-comments.dowload-as-csv": "Download all as .csv",
   "admin-tags-form.button.submit": "Save",
   "admin-tags-form.label.image": "Image",
   "admin-tags-form.label.name": "Name",
