--- a/lib/translations/lib/es.json
+++ b/lib/translations/lib/es.json
@@ -2,6 +2,7 @@
   "404.back-to-democracyos": "vuelve a DemocracyOS",
   "404.go-back-to": "vuelve a",
   "404.not-exists": "Esta página no existe",
+  "admin-sidebar.comments.title": "Comentarios",
   "admin-sidebar.tags.create": "Crear",
   "admin-sidebar.tags.list": "Listado",
   "admin-sidebar.tags.title": "Etiquetas",
@@ -10,6 +11,7 @@
   "admin-sidebar.topics.title": "Temas",
   "admin-sidebar.permissions.title": "Privilegios",
   "admin-sidebar.whitelists.title": "Usuarios habilitados",
+  "admin-comments.dowload-as-csv": "Descargar todos como .csv",
   "admin-tags-form.button.submit": "Guardar",
   "admin-tags-form.label.image": "Imagen",
   "admin-tags-form.label.name": "Nombre",
